
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1655] Fixed hardcoded lexicon strings in setup
- [#MODX-1621] Remove unnecessary context menu items from items in Resource Group Resources tree
- [#MODX-1627] Fixed incorrect menu in resource group tree resources when newly dragged
- [#MODX-1599] Added manager_date_format system setting for customizing date formats for the manager
- [#MODX-1651] Increasing width of setup navbar buttons to accommodate translations
- [#MODX-1649] Fixed bug where Quick Create didn't respect default_template setting
- [#MODX-1650] Fixed bug with language specification in setup to properly set cookie for Windows machines, and set initial language properly
- [#MODX-1626] Fixed bug where top menus could not have actions
- [#MODX-1494] Fixed issue where some settings dont have descriptions, and cleaned up deprecated settings
- [#MODX-1645] Fixed incorrect lexicon key for setting_site_start_err
- [#MODX-1646] Fixed issue where download buttons were staying grayed out if there was an error message
- [#MODX-1644] Added SMTP mail settings to default system settings to allow global SMTP usage for all modMail functions
- [#MODX-1606] Fixed bug in modRestCurlClient class due to encoded ampersand
- [#MODX-197] Refactored Action Buttons JS, added 'actionNew', 'actionContinue', and 'actionClose' events to MODx.FormPanel objects, ensured parent/context_key is persisted through add another resources
- Added a couple sanity checks to modRestCurlClient
- Added JS to disable install button when clicked in setup to prevent double-clicks
- controllers/resources/create: Refactored template inheritance to occur before any delegate controller is called.