@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-1656], [#MODX-1654] Fixed CSS gap in install summary in setup
 - [#MODX-1655] Fixed hardcoded lexicon strings in setup
 - [#MODX-1621] Remove unnecessary context menu items from items in Resource Group Resources tree
 - [#MODX-1627] Fixed incorrect menu in resource group tree resources when newly dragged
